<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="333dp"
        android:layout_height="600dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669"
        app:cardBackgroundColor="@color/trans"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        android:outlineAmbientShadowColor="@color/trans"
        android:outlineSpotShadowColor="@color/trans"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/instEmail"
                android:layout_width="288dp"
                android:layout_height="51dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/avenir"
                android:hint="@string/instEmail"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.152" />


            <EditText
                android:id="@+id/mobile"
                android:layout_width="288dp"
                android:layout_height="51dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/avenir"
                android:hint="@string/mobile_number"
                android:inputType="numberSigned"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.386" />

            <EditText
                android:id="@+id/name"
                android:layout_width="288dp"
                android:layout_height="51dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/avenir"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/instEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="288dp"
                android:layout_height="0dp"
                android:layout_marginTop="144dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:drawableEnd="@drawable/password_invisible"
                android:ems="10"
                android:fontFamily="@font/avenir"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/Skills"
                android:layout_width="288dp"
                android:layout_height="51dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/avenir"
                android:hint="Skills"
                android:inputType="textWebEditText"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.765" />

            <EditText
                android:id="@+id/github_profile"
                android:layout_width="288dp"
                android:layout_height="51dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/avenir"
                android:hint="Github profile URL"
                android:inputType="textWebEditText"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.645" />

            <EditText
                android:id="@+id/LinkedInURl"
                android:layout_width="288dp"
                android:layout_height="51dp"
                android:autofillHints=""
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/avenir"
                android:hint="Linked In URL"
                android:inputType="textWebEditText"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.518" />

            <Button
                android:id="@+id/signup"
                android:layout_width="186dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/box4"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/sign_up_button"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.57"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Password"
                app:layout_constraintVertical_bias="0.803" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="160dp"
                android:layout_height="35dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/already_registered"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.103"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.97" />

            <TextView
                android:id="@+id/Login"
                android:layout_width="104dp"
                android:layout_height="34dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/avenir"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView2" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>